Bugfix scrollbar on subnav

--- a/src/assets/_scss/composites/_navigation.scss
+++ b/src/assets/_scss/composites/_navigation.scss
@@ -374,6 +374,7 @@
         top: 0;
         left: 0;
         transform: none;
+        box-sizing: border-box;
       }
     }
 
@@ -522,7 +523,7 @@
         height: 0;
         overflow: hidden;
         overflow-y: auto;
-        box-sizing: content-box;
+        box-sizing: border-box;
         padding-bottom: $grid-gutter-width;
         margin-top: calc(48px + #{$grid-gutter-width});
         margin-left: 0;
